--- a/Lab21/Views/Home/Registration.cshtml
+++ b/Lab21/Views/Home/Registration.cshtml
@@ -11,5 +11,13 @@
     <label class="control-label">Email</label> <input id="email" type="email" name="emailaddress" class="form-control" />
     <label class="control-label">Phone Number</label> <input id="phoneNumber" type="text" name="PhoneNumber" class="form-control" />
     <label class="control-lable">Password</label> <input id="password" type="password" name="Password" class="form-control" />
+    <label class="control-label">Birthday</label> <input id="Birthday" type="Number" name="Birthday" class="form-control" placeholder="XX/XX/XXXX" />
+    <label>Gender:<input type="radio" name="gender" />Male</label><label><input type="radio" name="gender" />Female</label><label><input type="radio" name="gender" />Other</label><br />
+    <select id="dropdowntipo" name="EmploymentType">
+        <option value="FullTime">Full Time</option>
+        <option value="PartTime">Part Time</option>
+        <option value="Contract">Contract</option>
+    </select>
+    <br />
     <input type="submit" value="Register" class="btn-default" />
 </form>
