--- a/Lab21/Views/Home/Registration.cshtml
+++ b/Lab21/Views/Home/Registration.cshtml
@@ -3,21 +3,52 @@
     ViewBag.Title = "Registration";
 }
 
-<h2>Please fill the form to register!</h2>
-
+<h2>Register</h2>
+<script src="~/Scripts/Validate.js"></script>
+@*<link href="~/Content/StyleStuff.css" rel="stylesheet" />*@
 <form action="/Home/AddUser" method="post">
-    <label class="contol-label">First Name</label> <input id="firstName" type="text" name="FirstName" class="form-control" />
-    <label class="control-label">Last Name</label> <input id="lastName" type="text" name="LastName" class="form-control" />
-    <label class="control-label">Email</label> <input id="email" type="email" name="emailaddress" class="form-control" />
-    <label class="control-label">Phone Number</label> <input id="phoneNumber" type="text" name="PhoneNumber" class="form-control" />
-    <label class="control-lable">Password</label> <input id="password" type="password" name="Password" class="form-control" />
-    <label class="control-label">Birthday</label> <input id="Birthday" type="Number" name="Birthday" class="form-control" placeholder="XX/XX/XXXX" />
-    <label>Gender:<input type="radio" name="gender" />Male</label><label><input type="radio" name="gender" />Female</label><label><input type="radio" name="gender" />Other</label><br />
-    <select id="dropdowntipo" name="EmploymentType">
-        <option value="FullTime">Full Time</option>
-        <option value="PartTime">Part Time</option>
-        <option value="Contract">Contract</option>
-    </select>
+    <label class="control-label">First Name </label>
+    <div class="flex-container">
+        <input id="firstName" type="text" name="FirstName" class="form-control" onkeyup="ValidateFirstName()" />
+        <p id="message"></p>
+    </div>
+    <label class="control-label">Last Name</label>
+    <div class="flex-container">
+        <input id="lastName" type="text" name="LastName" class="form-control" onkeyup="ValidateLastName()" />
+        <p id="message2"></p>
+    </div>
+    <label class="control-label">Phone Number</label>
+    <div class="flex-container">
+        <input id="phoneNumber" type="text" name="PhoneNumber" class="form-control" onkeyup="ValidatePhoneNumber()" />
+        <p id="message5"></p>
+    </div>
+    <label class="control-label">Zip Code</label>
+    <div class="flex-container">
+        <input id="zipCode" type="text" name="ZipCode" class="form-control" onkeyup="ValidateZipCode()" />
+        <p id="message4"></p>
+    </div>
+    <label class="control-label">Email</label>
+    <div class="flex-container">
+        <input id="email" type="text" name="EmailAddress" class="form-control" onkeyup="ValidateEmail()" />
+        <p id="message3"></p>
+    </div>
+    <label class="control-label">Password</label>
+    <div class="flex-container">
+        <input id="password" type="text" name="Password" class="form-control" onkeyup="ValidatePassword(); CheckPassword();" />
+        <p id="message6"></p>
+    </div>
+    <label class="control-label">Confirm Password</label>
+    <div class="flex-container">
+        <input id="password2" type="text" name="Password2" class="form-control" onkeyup="ValidatePassword(); CheckPassword();" />
+        <p id="matchMessage"></p>
+    </div>
+    <div>
+        <input type="radio" name="gender" value="male" checked> Male<br>
+        <input type="radio" name="gender" value="female"> Female<br>
+        <input type="radio" name="gender" value="other"> Other
+    </div>
     <br />
-    <input type="submit" value="Register" class="btn-default" />
+    <br />
+    <input type="submit" value="Register!" class="btn-default" />
 </form>
+<p id="errormessage">@ViewBag.ErrorMessage</p>
